Fix author metadata line breaks on blog posts

--- a/themes/mm/sass/app.scss
+++ b/themes/mm/sass/app.scss
@@ -265,10 +265,6 @@ figcaption {
   margin-top: $spacer * 1.3;
 }
 
-.author {
-  white-space: pre-line;
-}
-
 .img-author {
   margin-bottom: $spacer / 2;
 }
